# starlight-rs

./: .clippy.toml  .codespellrc  .dockerignore  .editorconfig  .example.env  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  build.rs  docker-compose.yml  i18n.json  mold-install.sh  rustfmt.toml
.cargo/: config  config.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.devcontainer/library-scripts/: common-debian.sh  docker-debian.sh  rust-debian.sh
.github/workflows/: library.yml  lint.yml  publish.yml  test.yml
args/: Cargo.toml
args/benches/: bench_args.rs
args/src/: id.rs  lib.rs
cache/: Cargo.toml
cache/base/: Cargo.toml
cache/base/src/: backend.rs  cache.rs  lib.rs  utils.rs
cache/base/src/entity/: mod.rs
cache/base/src/entity/channel/: attachment.rs  category_channel.rs  group.rs  message.rs  mod.rs  private_channel.rs  text_channel.rs  voice_channel.rs
cache/base/src/entity/gateway/: mod.rs  presence.rs
cache/base/src/entity/guild/: emoji.rs  member.rs  mod.rs  role.rs
cache/base/src/entity/user/: current_user.rs  mod.rs
cache/base/src/entity/voice/: mod.rs  state.rs
cache/base/src/repository/: impl.rs  mod.rs  noop.rs
cache/in-memory/: Cargo.toml
cache/in-memory/src/: config.rs  lib.rs  prelude.rs  repository.rs
cache/src/: config.rs  lib.rs
cache/src/model/: emoji.rs  guild.rs  member.rs  message.rs  mod.rs  presence.rs  voice_state.rs
cache/unqlite/: Cargo.toml
cache/unqlite/src/: lib.rs
calculator/: Cargo.toml
calculator/src/: bitops.rs  lib.rs  preset.rs
celestial/: Cargo.toml
celestial/src/: lib.rs
celestial/src/backend/: bincode.rs  cbor.rs  json.rs  mod.rs
celestial/src/database/: mod.rs
click-derive/: Cargo.toml
click-derive/src/: attr.rs  lib.rs  util.rs
constella/: Cargo.toml
constella/src/: describer_impls.rs  implementors.rs  lib.rs  transformer_impls.rs
embed-builder/: Cargo.toml
error/: Cargo.toml
error/src/: lib.rs
i18n/: en_us.json
i18n-build/: Cargo.toml
i18n-build/src/: lib.rs
lang/: Cargo.toml
lang/benches/: bench_lang.rs
lang/model/: Cargo.toml
lang/server/: Cargo.toml
lang/server/src/: main.rs  paste_id.rs
lang/src/: error.rs  lib.rs
lang/test/: en_us.json
lang_old/: Cargo.toml
lang_old/test/: lang.json
mention/: Cargo.toml
mention/src/: fmt.rs  lib.rs
mention/src/parse/: error.rs  impl.rs  iter.rs  mod.rs
nebula/: Cargo.toml
nebula/src/: id.rs  lib.rs
nebula/src/id/: key.rs  mod.rs
proxy/: .dockerignore  Cargo.toml  Dockerfile
proxy/src/: client_map.rs  error.rs  main.rs  ratelimiter_map.rs
singularity/: Cargo.toml  build.rs
singularity/src/: backtrace.rs  chain.rs  error.rs  lib.rs  ptr.rs  wrapper.rs
src/: lib.rs  main.rs  prelude.rs
src/components/: action_row.rs  builder.rs  button.rs  mod.rs  select_menu.rs
src/database/: mod.rs
src/database/entity/: guild.rs  mod.rs
src/ext_traits/: interaction_author.rs  mod.rs
src/helpers/: color.rs  id.rs  interactions.rs  mod.rs
src/helpers/cache/: error.rs  mod.rs
src/helpers/cache/models/: emoji.rs  member.rs  mod.rs
src/helpers/parsing/: codeblock.rs  command_option.rs  mod.rs
src/helpers/playground/: mod.rs  request.rs  response.rs  util.rs
src/i18n/: definition.rs  en_us.rs  mod.rs
src/lib/: args.rs  client.rs  client_old.rs  mod.rs
src/lib/framework/: mod.rs
src/lib/slashies/: commands.rs  mod.rs
src/lib/state/: builder.rs  error.rs  event_handler.rs  events.rs  mod.rs
src/lib/state/events/: error.rs  mod.rs
src/lib/util/: logger.rs  macros.rs  mod.rs  typemap.rs
src/persistence/: database.rs  mod.rs
src/persistence/entities/: guild.rs  mod.rs
src/persistence/settings/: client.rs  guild.rs  mod.rs
src/settings/: global.rs  guild.rs  mod.rs
src/settings/guild/: blocked_user.rs  mod.rs  tag.rs
src/slashies/: commands.rs  impl.rs  interaction.rs  mod.rs
src/slashies/commands/: block.rs  click.rs  crate.rs  info.rs  mod.rs  ping.rs  play.rs  settings.rs  stats.rs  tag.rs
src/slashies/impl/: click.rs  mod.rs  parse.rs  slash.rs
src/state/: builder.rs  config.rs  events.rs  helper.rs  mod.rs
src/utils/: constants.rs  mod.rs
star-derive/: Cargo.toml
star-derive/src/: attr.rs  lib.rs
star-signal/: Cargo.toml
star-signal/src/: futures.rs  lib.rs
star-test/: Cargo.toml
star-test/src/: main.rs
starchart/: Cargo.toml
starchart/src/: chart.rs  helpers.rs  lib.rs  map.rs
starlight-macros/: Cargo.toml
starlight-macros/src/: lib.rs  model.rs
supernova/: Cargo.toml
supernova/src/: lib.rs  model.rs
test/: Cargo.toml  build.rs  cg.dot  commands.json
test/benches/: date_time.rs  rayon.rs  serde.rs  serialize.rs
test/languages/: en_us.json
test/src/: lib.rs  main.rs
timestream/: Cargo.toml
timestream/src/: lib.rs  schedule.rs
