cargo-features = ["strip"]

[package]
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]
edition = "2021"
license = "MIT"
name = "starlight"
version = "0.1.0"
resolver = "2"

[dependencies]
base64 = "0.13.0"
futures-util = "0.3.18"
serde_json = "1"
thiserror = "1.0.30"
tracing = "0.1"
twilight-embed-builder = "0.8"

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"

[dependencies.miette]
features = ["fancy"]
version = "3.0.1"

[dependencies.reqwest]
version = "0.11.7"
features = ["json"]

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.starlight-macros]
path = "./starlight-macros"

[dependencies.tokio]
features = ["macros", "rt-multi-thread", "signal", "fs"]
version = "1.11.0"

[dependencies.tracing-subscriber]
features = ["fmt", "ansi"]
version = "0.2.20"

[dependencies.twilight-cache-inmemory]
default-features = false
version = "0.8"

[dependencies.twilight-gateway]
default-features = false
features = ["zlib-simd", "metrics", "rustls", "tracing"]
version = "0.8"

[dependencies.twilight-http]
default-features = false
features = ["tracing", "simd-json", "rustls"]
version = "0.8"

[dependencies.twilight-model]
version = "0.8"

[dependencies.twilight-standby]
features = ["tracing"]
version = "0.8"

[dependencies.twilight-util]
features = ["builder"]
version = "0.8"

[profile.release]
codegen-units = 1
debug = true
opt-level = 3
overflow-checks = false
panic = "abort"
strip = "symbols"

[profile.bench]
lto = "fat"

[workspace]
members = ["./starlight-macros"]

[features]
default = []
docker = []
