cargo-features = ["strip"]

[package]
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]
edition = "2021"
license = "MIT"
name = "starlight"
resolver = "2"
version = "0.1.0"

[dependencies]
base64 = "0.13.0"
futures-util = "0.3.19"
serde_json = "1.0.73"
thiserror = "1.0.30"
tracing = "0.1.29"
twilight-embed-builder = "0.8.0"
twilight-model = "0.8.1"

[dependencies.clap]
features = ["cargo", "env"]
version = "3.0.0-rc.7"

[dependencies.miette]
features = ["fancy"]
version = "3.2.0"

[dependencies.reqwest]
features = ["json"]
version = "0.11.8"

[dependencies.serde]
features = ["derive"]
version = "1.0.132"

[dependencies.starchart]
features = ["derive", "metadata", "ron"]
version = "0.10"

[dependencies.starlight-macros]
path = "./starlight-macros"

[dependencies.tokio]
features = ["macros", "rt-multi-thread", "signal", "fs"]
version = "1.15.0"

[dependencies.tracing-subscriber]
default-features = false
features = ["fmt", "ansi", "std", "env-filter"]
version = "0.3.3"

[dependencies.twilight-cache-inmemory]
default-features = false
version = "0.8.1"

[dependencies.twilight-gateway]
default-features = false
features = ["zlib-simd", "metrics", "rustls", "tracing"]
version = "0.8.0"

[dependencies.twilight-http]
default-features = false
features = ["tracing", "simd-json", "rustls"]
version = "0.8.1"

[dependencies.twilight-standby]
features = ["tracing"]
version = "0.8.0"

[dependencies.twilight-util]
features = ["builder"]
version = "0.8.1"

[target.x86_64-unknown-linux-gnu.build-dependencies]
which = "4.2"

[profile.release]
codegen-units = 1
debug = true
opt-level = 3
overflow-checks = false
panic = "abort"
strip = "symbols"

[profile.bench]
lto = "fat"

[workspace]
members = ["./starlight-macros"]

[features]
default = []
docker = []
