[package]
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]
edition = "2021"
license = "MIT"
name = "starlight"
resolver = "2"
version = "0.1.0"

[dependencies]
base64 = "0.13.0"
dotenv = "0.15.0"
futures-util = "0.3.19"
serde_json = "1.0.73"
thiserror = "1.0.30"
tracing = "0.1.29"

[dependencies.clap]
features = ["cargo", "env"]
version = "3.0.0-rc.7"

[dependencies.miette]
features = ["fancy"]
version = "3.2.0"

[dependencies.reqwest]
features = ["json"]
version = "0.11.8"

[dependencies.serde]
features = ["derive"]
version = "1.0.132"

[dependencies.starchart]
features = ["derive", "toml", "pretty", "metadata"]
git = "https://github.com/starlite-project/starchart"
rev = "f91a226fcc5a30a0e2c4d87ff7497711ded6541f"

[dependencies.starlight-macros]
path = "./starlight-macros"

[dependencies.time]
version = "0.3.5"
features = ["serde"]

[dependencies.tokio]
features = ["macros", "rt-multi-thread", "signal", "fs"]
version = "1.15.0"

[dependencies.tracing-subscriber]
default-features = false
features = ["fmt", "ansi", "std", "env-filter"]
version = "0.3.3"

[dependencies.twilight-cache-inmemory]
default-features = false
features = ["permission-calculator"]
git = "https://github.com/twilight-rs/twilight.git"
rev = "e31de7b92b7d7929eacca01355636ea841887d66"

[dependencies.twilight-embed-builder]
git = "https://github.com/twilight-rs/twilight.git"
rev = "e31de7b92b7d7929eacca01355636ea841887d66"

[dependencies.twilight-gateway]
default-features = false
features = ["zlib-simd", "metrics", "rustls-tls", "tracing", "rustls-native-roots"]
git = "https://github.com/twilight-rs/twilight.git"
rev = "e31de7b92b7d7929eacca01355636ea841887d66"

[dependencies.twilight-http]
features = ["tracing", "simd-json", "brotli"]
git = "https://github.com/twilight-rs/twilight.git"
rev = "e31de7b92b7d7929eacca01355636ea841887d66"

[dependencies.twilight-model]
git = "https://github.com/twilight-rs/twilight.git"
rev = "e31de7b92b7d7929eacca01355636ea841887d66"

[dependencies.twilight-standby]
features = ["tracing"]
git = "https://github.com/twilight-rs/twilight.git"
rev = "e31de7b92b7d7929eacca01355636ea841887d66"

[dependencies.twilight-util]
features = ["builder"]
git = "https://github.com/twilight-rs/twilight.git"
rev = "e31de7b92b7d7929eacca01355636ea841887d66"

[dependencies.twilight-validate]
git = "https://github.com/twilight-rs/twilight.git"
rev = "e31de7b92b7d7929eacca01355636ea841887d66"

[profile.release]
codegen-units = 1
debug = true
opt-level = 3
overflow-checks = false
panic = "abort"
strip = "symbols"

[profile.bench]
lto = "fat"

[workspace]
members = ["./starlight-macros"]

[features]
default = []
docker = []
