[package]
name = "star-args"
version = "0.1.0"
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]
edition = "2018"

[dependencies]
uwl = "0.6.0"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.twilight-command-parser]
git = "https://github.com/twilight-rs/twilight.git"

[dependencies.twilight-model]
git = "https://github.com/twilight-rs/twilight.git"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_args"
harness = false