[package]
name = "celestial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
persy = "1.0.0"

[dependencies.bincode]
version = "1"
optional = true

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.ciborium]
version = "0.1"
optional = true

[features]
default = ["json"]
json = ["serde_json"]
cbor = ["ciborium"]