[package]
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]
edition = "2018"
name = "constella"
version = "0.1.0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.structsy]
git = "https://gitlab.com/tglman/structsy.git"

[dependencies.twilight-model]
git = "https://github.com/PyroTechniac/twilight.git"
