[package]
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]
edition = "2018"
name = "constella"
version = "0.1.0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.structsy]
git = "https://gitlab.com/tglman/structsy.git"

[dependencies.twilight-model]
git = "https://github.com/PyroTechniac/twilight.git"
rev = "05b7a38c952cb4da509054e788283f8fc0f7e47f"
