[package]
name = "star-lang"
version = "0.1.0"
edition = "2018"
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]

[dependencies]
bincode = "1"
serde_json = "1"

[dependencies.serde]
version = "1"
features = ["derive", "rc"]

[dependencies.star-error]
path = "../error"

[dev-dependencies]
static_assertions = "1"
criterion = "0.3"

[[bench]]
name = "bench_lang"
harness = false