[package]
name = "nebula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.twilight-model]
git = "https://github.com/PyroTechniac/twilight.git"
rev = "31aeb9f2bc79b129384322d42c6cf045e601a547"
