[package]
edition = "2021"
name = "nebula"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heed-traits = "0.8.0"
thiserror = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.starchart]
path = "../starchart"

[dependencies.twilight-model]
git = "https://github.com/PyroTechniac/twilight.git"
rev = "31aeb9f2bc79b129384322d42c6cf045e601a547"
