[package]
edition = "2021"
name = "nebula"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heed-traits = "0.8.0"
thiserror = "1"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.starchart]
path = "../starchart"

[dependencies.twilight-model]
git = "https://github.com/twilight-rs/twilight.git"
rev = "9aa74e074741c4ae46e6625e83af050a3db076d0"