[package]
name = "star-proxy"
edition = "2018"
version = "0.1.0"
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]

[dependencies]
dashmap = "4.0"
dotenv = "0.15"
http = "0.2"
tracing = "0.1"
tracing-log = "0.1"

[dependencies.hyper]
version = "0.14"
features = ["tcp", "server", "http1", "http2"]

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "macros"]

[dependencies.tracing-subscriber]
version = "0.2"
features = ["fmt", "registry"]

[dependencies.twilight-http]
git = "https://github.com/twilight-rs/twilight.git"
default-features = false
features = ["rustls-webpki-roots"]

[dependencies.metrics]
version = "0.17"
optional = true

[dependencies.metrics-exporter-prometheus]
version = "0.6"
optional = true

[dependencies.lazy_static]
version = "1.4"
optional = true

[features]
expose-metrics = ["metrics", "metrics-exporter-prometheus", "lazy_static"]