cargo-features = ["strip"]

[package]
edition = "2021"
name = "star-proxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "4.0"
http = "0.2"
lazy_static = "1.4"
metrics = "0.17"
metrics-exporter-prometheus = "0.6"
thiserror = "1.0.3"
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.hyper]
features = ["tcp", "server", "client", "http1", "http2"]
version = "0.14"

[dependencies.hyper-rustls]
default-features = false
features = ["webpki-tokio"]
version = "0.22"

[dependencies.miette]
features = ["fancy"]
version = "3"

[dependencies.tokio]
features = ["rt-multi-thread", "macros", "signal"]
version = "1.0"

[dependencies.twilight-http]
default-features = false
features = ["rustls-webpki-roots"]
git = "https://github.com/PyroTechniac/twilight.git"
rev = "05b7a38c952cb4da509054e788283f8fc0f7e47f"

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3
overflow-checks = false
panic = "abort"
strip = "symbols"
