[package]
name = "star-signal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.3"

[dependencies.dashmap]
default-features = false
version = "4.0"

[dependencies.futures-util]
default-features = false
features = ["std"]
version = "0.3"

[dependencies.tokio]
default-features = false
features = ["sync"]
version = "1"

[dependencies.tracing]
default-features = false
features = ["std", "attributes"]
optional = true
version = "0.1" 

[dependencies.twilight-model]
default-features = false
git = "https://github.com/twilight-rs/twilight.git"

[dev-dependencies.static_assertions]
default-features = false
version = "1"

[dev-dependencies.tokio]
default-features = false
features = ["macros", "rt-multi-thread"]
version = "1"

[dev-dependencies.twilight-gateway]
default-features = false
features = ["rustls"]
git = "https://github.com/twilight-rs/twilight.git"

[features]
default = ["tracing"]