[package]
edition = "2021"
name = "starchart"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.heed]
version = "0.11"
default-features = false
features = ["lmdb", "serde", "serde-bincode"]

[dependencies.serde]
version = "1"
features = ["derive"]