[package]
edition = "2021"
name = "starchart"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
thiserror = "1.0.30"

[dependencies.heed]
version = "0.11"
default-features = false
features = ["mdbx", "serde", "serde-json", "serde-bincode"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
default-features = false
features = ["fs"]