[package]
name = "starlight-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = "3.0.1"
serde = "1"
thiserror = "1.0.30"

[dependencies.twilight-http]
git = "https://github.com/twilight-rs/twilight.git"
rev = "e31de7b92b7d7929eacca01355636ea841887d66"

[dependencies.twilight-model]
git = "https://github.com/twilight-rs/twilight.git"
rev = "e31de7b92b7d7929eacca01355636ea841887d66"
