[package]
edition = "2021"
name = "supernova"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
miette = "3.0.1"
serde = "1"

[dependencies.twilight-http]
git = "https://github.com/PyroTechniac/twilight.git"
rev = "31aeb9f2bc79b129384322d42c6cf045e601a547"

[dependencies.twilight-model]
git = "https://github.com/PyroTechniac/twilight.git"
rev = "31aeb9f2bc79b129384322d42c6cf045e601a547"

[dev-dependencies.miette]
version = "3.0.1"
features = ["fancy"]

[dev-dependencies.tokio]
version = "1"
default-features = false
features = ["rt", "macros"]
