[package]
edition = "2021"
name = "supernova"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = "3.0.1"
serde = "1"
thiserror = "1.0.30"

[dependencies.twilight-http]
git = "https://github.com/twilight-rs/twilight.git"
rev = "9aa74e074741c4ae46e6625e83af050a3db076d0"

[dependencies.twilight-model]
git = "https://github.com/twilight-rs/twilight.git"
rev = "9aa74e074741c4ae46e6625e83af050a3db076d0"

[dev-dependencies.miette]
features = ["fancy"]
version = "3.0.1"

[dev-dependencies.tokio]
default-features = false
features = ["rt", "macros"]
version = "1"
