[package]
name = "timestream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11"
threadpool = "1.7"

[dependencies.chrono]
default-features = false
features = ["std", "clock", "serde"]
version = "0.4.19"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.supernova]
path = "../supernova"