[package]
name = "timestream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.3"

[dependencies.nebula]
path = "../nebula"

[dependencies.tokio]
version = "1.11.0"
features = ["rt", "time", "sync"]