[package]
name = "star-cache-base"
version = "0.1.0"
edition = "2018"
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]

[dependencies]
futures-util = "0.3"

[dependencies.serde]
features = ["derive"]
version = "1"
optional = true

[dependencies.twilight-model]
git = "https://github.com/twilight-rs/twilight.git"

[dev-dependencies.tokio]
version = "1"

[features]
default = ["serde"]
